--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Jean-cédric Thérond/Kane Thornwyrd</title>
+    <title>Kane's Forge</title>
   </head>
   <body>
     <div id="root">
