--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       .spinner {
         width: 40px;
         height: 40px;
-        background-color: #00AA7F;
+        background-color: #158CBA;
 
         margin: 100px auto;
         -webkit-animation: sk-rotateplane 1.2s infinite ease-in-out;
